--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,6 @@ a:hover {
 }
 
 hr {
-    border-style: solid;
     margin-top: 40px;
     margin-bottom: 40px;
 }
@@ -61,7 +60,21 @@ hr {
     max-width: 1200px;
     min-height: 300px;
     margin: 0 auto;
+    padding: 20px;
     background-color: white;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     border-radius: 15px;
+}
+
+.result {
+    display: block;
+    width: 80%;
+    max-width: 1200px;
+    margin: 40px auto;
+    padding: 20px;
+    text-align: center;
+    font-size: 60px;
+    font-weight: 700;
+    border-radius: 15px;
+    background-color: rgb(169, 240, 193);
 }
